[package]
name = "emacs-preview-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
bytes = "1.5.0"
dashmap = "5.5.3"
emacs = "0.18.0"
hyper = {version = "0.14.27", default-features = false, features = ["runtime", "server", "http1", "stream"]}
once_cell = "1.18.0"
percent-encoding = "2.3.0"
pin-project-lite = "0.2.13"
tokio = {version = "1.34.0", default-features = false, features = ["rt", "fs"]}
tokio-util = {version = "0.7.10", features = ["codec"]}
winapi = {version="0.3.9", features=["debugapi"]}

[lib]
crate-type = ["cdylib"]
